# consim

./: .gitignore  CMakeLists.txt  README.md
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  __init__.py  base.cpp  bindings.cpp  contacts.cpp  explicit_euler.cpp  exponential.cpp  implicit_euler.cpp  rigid_euler.cpp  rk4.cpp  stop_watch.cpp
include/consim/: contact.hpp  dynamic_algebra.hpp  exponential_integrator.hpp  exponential_simulator.hpp  implicit_euler.hpp  object.hpp  real_time_tools.hpp  simulator.hpp
include/consim/bindings/python/: base.hpp  common.hpp  contacts.hpp  explicit_euler.hpp  exponential.hpp  implicit_euler.hpp  rigid_euler.hpp  rk4.hpp  stop_watch.hpp
include/consim/simulators/: base.hpp  common.hpp  explicit_euler.hpp  exponential.hpp  implicit_euler.hpp  rigid_euler.hpp  rk4.hpp
include/consim/utils/: statistics.hpp  stop-watch.hpp
script/: conf_solo.py  conf_solo_py.py  robot_simulator_exponential_integrator.py  test_ball_in_the_air.py  test_exp_integrator_with_quadruped.py  test_solo_cpp_sim.py  test_sparse_expm.py  tsid_quadruped.py  utils_LDS_integral.py
script/consim_py/: conf_sliding_mass_cpp.py  conf_sliding_mass_py.py  conf_solo.py  conf_solo_cpp.py  conf_solo_py.py  robot_simulator_exponential_integrator.py  simu_cpp_common.py  simulator.py  simulator_python2.py  test_accuracy_cpp.py  test_ball_in_the_air.py  test_exp_integrator_with_quadruped.py  test_implicit_euler_cpp.py  test_sliding_mass_cpp.py  test_sliding_mass_py.py  test_solo_cpp_sim.py  test_solo_py.py  tsid_quadruped.py  utils_LDS_integral.py
script/consim_py/demo/: gaits_solo12.py  half_plane_with_point_mass.py  point_mass_simulation.py  quadruped_consim.py  rk4_vs_euler.py  sliding_point_conf.py  sliding_point_cpp_vs_py.py  sliding_point_mass.py  trot_solo12.py  video_recrodings .ipynb  visualize.py
script/consim_py/demo/python_simulations/: conf_pointmass.py  sliding_point_mass_py2.py  unilateral_bilateral_point.py
script/consim_py/demo/references/: jump_feedback.npy  jump_reference_controls.npy  jump_reference_states.npy  romeo_walking_traj_tsid.npz  trot_feedback.npy  trot_reference_controls.npy  trot_reference_states.npy
script/consim_py/ral2020/: conf_romeo_cpp.py  conf_solo_cpp.py  conf_solo_squat_cpp.py  conf_solo_trot_cpp.py  conf_solo_trot_cpp_vs_py.py  conf_solo_trot_py.py  conf_talos_cpp.py  figures_for_video.ipynb  impact_force_plots.py  linear_feedback_controller.py  simu_cpp_common.py  solo_squat_cpp.py  solo_trot_common.py  solo_trot_cpp.py  solo_trot_cpp_vs_py.py  solo_trot_jump_cpp.py  solo_trot_py.py  test_accuracy_cpp.py  test_computation_times.py  test_simu_cpp.py  test_stability_cpp.py  test_stiff_damp_cpp.py  tsid_biped.py
script/consim_py/utils/: exponential_matrix_helper.py  exponential_matrix_helper_py2.py  plot_utils.py  utils_LDS_integral.py  visualize.py
script/demo/: euler_simulator_point .ipynb  point_mass_simulation.py
script/demo/.ipynb_checkpoints/: euler_simulator_point -checkpoint.ipynb
script/models/robot_properties_solo/python/robot_properties_solo/: quadruped12wrapper.py
script/models/robot_properties_solo/rqt/: solo.perspective
script/models/robot_properties_solo/urdf/: plane_with_restitution.urdf  solo.urdf  solo12.urdf  solo_old.urdf
script/models/urdf/: ankled_biped.urdf  free_flyer.urdf  simple_biped.urdf  spatial_biped.urdf
script/utils/: plot_utils.py
src/: CMakeLists.txt  contact.cpp  exponential_integrator.cpp  exponential_simulator.cpp  implicit_euler.cpp  object.cpp  simulator.cpp
src/simulators/: base.cpp  common.cpp  explicit_euler.cpp  exponential.cpp  implicit_euler.cpp  rigid_euler.cpp  rk4.cpp
src/utils/: stop-watch.cpp
tests/: CMakeLists.txt  test_utils.hpp
