# --- MACROS ------------------------------------------------------------------

MACRO(ADD_TEST_CFLAGS target flag)
  SET_PROPERTY(TARGET "test-cpp-${target}" APPEND_STRING PROPERTY COMPILE_FLAGS " ${flag}")
ENDMACRO(ADD_TEST_CFLAGS)

MACRO(ADD_CONSIM_UNIT_TEST NAME)
  SET(PKGS ${ARGN}) # Optional arguments

  SET(TEST_NAME "test-cpp-${NAME}")
  ADD_UNIT_TEST(${TEST_NAME} ${NAME}.cpp)
  SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES LINKER_LANGUAGE CXX)
  TARGET_INCLUDE_DIRECTORIES(${TEST_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

  ADD_TEST_CFLAGS(${NAME} "-DBOOST_TEST_DYN_LINK") 
  SET(MODULE_NAME "${NAME}Test")
  STRING(REGEX REPLACE "-" "_" MODULE_NAME ${MODULE_NAME})
  ADD_TEST_CFLAGS(${NAME} "-DBOOST_TEST_MODULE=${MODULE_NAME}") 
  ADD_TEST_CFLAGS(${NAME} '-DPINOCCHIO_MODEL_DIR=\\\"${PINOCCHIO_MODEL_DIR}\\\"')

  PKG_CONFIG_USE_DEPENDENCY(${TEST_NAME} eigen3)
  FOREACH(PKG ${PKGS})
    PKG_CONFIG_USE_DEPENDENCY(${TEST_NAME} ${PKG})
  ENDFOREACH(PKG)

  TARGET_LINK_LIBRARIES(${TEST_NAME} PUBLIC ${PROJECT_NAME})
  TARGET_LINK_LIBRARIES(${TEST_NAME} PRIVATE ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
ENDMACRO(ADD_CONSIM_UNIT_TEST)


# --- TEST_UTILS -------------------------------------------------------------
INCLUDE_DIRECTORIES(.)

# --- TESTS ------------------------------------------------------------------

#ADD_CONSIM_UNIT_TEST(test_contact)
#ADD_CONSIM_UNIT_TEST(test_object)
#ADD_CONSIM_UNIT_TEST(test_euler)
#ADD_CONSIM_UNIT_TEST(test_exponential)
